<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱啵秀</string>
    <string name="app_name_china">爱啵秀</string>
    <string name="press_again_to_exit">再按一次退出爱啵</string>

    <string name="call_help">客服</string>
    <string name="my_info">我的信息</string>
    <string name="about_imbra">关于我们</string>

    <string name="menu_bra_max">BraMax</string>
    <string name="menu_collect">甄选类感</string>
    <string name="menu_blog">爱啵秘密</string>
    <string name="menu_o2o">O2Obra</string>
    <string name="menu_setting">设置</string>

    <string name="filter">筛选</string>


    <string name="search_text_hint">请输入查找内容</string>
	<!-- menu -->
	<string name="main_home">首页</string>
	<string name="living_spirit">家居灵感</string>
	<string name="living_qa">家居问答</string>
	<string name="img_gallery">家居图库</string>
	<string name="pick_desinger">选设计师</string>
	<string name="pan_product">淘单品</string>
	<string name="my">我的</string>
    <string name="click_go">点击查看  ></string>

    <string name="my_address">我的地址</string>
    <string name="relative_pro">相关商品</string>

    <string name="brand_brief">品牌介绍</string>
    <string name="brand_story">品牌故事</string>

    <string name="shopping">购买</string>

    <string name="shopping_flow">购买流程</string>
    <string name="shopping_hint">购买说明</string>
    <string name="shopping_retreat">退换货</string>


    <string name="shopping_hint_content">爱啵作为所推内衣商品的大陆独家代理商，优享海外快速购货，海量库存，即买即派。爱上无需等待。为了给您更加多样的选择，我们还提供代理商品预购和买手私人定制两种方式，两周内到货，请在有效期内下单并完成支付。遇有暂时售罄的商品可以添加到货通知，再入库时我们会第一时间消息通知。</string>
    <string name="shopping_retreat_content">我们会根据您填写的身材数据以及需要的尺寸准确快速发货，所有非商品质量问题的退货要求，需要支付内衣单价的20%作为服务费。由于内衣类商品的特殊性，完成交易的底裤、nubra、情趣类商品不接受退换。如在收货后发现内衣尺寸不合适，请在收货72小时内联系爱啵客服，或是到就近的实体店，我们会尽快为您更换最合适的尺寸。感谢您的体谅，我们将竭诚为您服务。</string>

    <string name="brand_blog">相关甄选</string>

    <string name="receiver_info">收货人信息</string>
    <string name="receiver_info_must">收货人信息（必填）</string>
    <string name="add_receiver">添加收货人信息</string>
    <string name="coupon">优惠券</string>
    <string name="coupon_x">%s元 代金券</string>

    <string name="no_coupon">暂无优惠券</string>

    <string name="list_no_address">您还没有填写收货地址</string>
    <string name="add_address">增加地址</string>

    <string name="receiver_name_must">收货人姓名（必填）</string>
    <string name="phone_num_must">电话(必填)</string>
    <string name="area_3_level">省市区</string>
    <string name="area_code">邮政编码</string>
    <string name="address_detail">详细地址(必填)</string>
    <string name="manager_address">管理收货地址</string>

    <string name="order_detail">订单详情</string>
    <string name="pay">付款</string>
    <string name="pay_method">支付方式</string>
    <string name="pay_info">支付信息</string>
    <string name="pay_wx">微信支付</string>
    <string name="size">尺码</string>
    <string name="size_x">尺码: %s</string>
    <string name="num">数量</string>
    <string name="num_x">数量: %s</string>

    <string name="cancel_order">取消订单</string>

    <string name="pay_hint_nor">如有问题请联系爱啵秀客服\n微信号： xxxxxx</string>
    <string name="pay_hint_quick">请在30分钟内完成支付\n逾期订单将自动取消</string>


    <string name="after_pay_hint_nor">详细订单信息请查看个人中心订单详情\n如有问题请联系爱啵秀客服\n微信号： xxxxxx</string>
    <string name="more_o2o_shop">更多店铺  敬请期待</string>

    <string name="modify_nikename">修改昵称</string>
    <string name="modify_pic">修改头像</string>
    <string name="bind_phone">绑定手机</string>
    <string name="clear_cache">清除缓存</string>
    <string name="contact_us">联系我们</string>
    <string name="about_us"> 关于爱啵</string>

    <string name="input_coupon">请输入优惠码</string>
    <string name="no_product_hint">Opps，没有搜到商品，更改筛选条件试试～</string>
    <string name="no_coupon_hint">Opps，您还没有优惠券呢～</string>
    <string name="no_order_hint">Opps，您还没有订单呢～</string>
    <string name="no_fav_hint">Opps，您还没有收藏商品呢～</string>


    <string name="pls_set_receiver">请设置收货人信息</string>
    <string name="order_x">订单号:%s</string>
    <string name="fee_x">订单金额:¥%s</string>

    <string name="buy_self">给自己</string>
    <string name="buy_friend">送朋友</string>


    <string name="order_stat_0">待审核</string>
    <string name="order_stat_1">审核通过待支付</string>
    <string name="order_stat_2">支付成功待出库</string>
    <string name="order_stat_3">出库打包中</string>
    <string name="order_stat_4">已出库</string>
    <string name="order_stat_5">待审核</string>
    <string name="order_stat_6">已签收</string>
    <string name="order_err_0">订单错误</string>
    <string name="order_err_1">系统作废</string>
    <string name="order_err_2">客服作废</string>
    <string name="order_err_3">用户作废</string>
    <string name="order_err_4">部分退货</string>
    <string name="order_err_5">全部退货</string>


</resources>
