<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:inmost="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_margin="10dp"
        android:id="@+id/shopping_hint_rg"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/tab_hint_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shopping_hint"
            android:textColor="@color/txt_pink_white_selector"
            android:textSize="@dimen/bar_font_30"
            android:gravity="center"
            android:button="@drawable/none"
            android:background="@drawable/button_pink_frame_round"
            android:checked="false" />
        <RadioButton
            android:id="@+id/tab_flow_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shopping_flow"
            android:textColor="@color/txt_pink_white_selector"
            android:textSize="@dimen/bar_font_30"
            android:gravity="center"
            android:button="@drawable/none"
            android:background="@drawable/button_pink_frame_round"
            android:checked="false" />
        <RadioButton
            android:id="@+id/tab_retreat_rb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/shopping_retreat"
            android:textColor="@color/txt_pink_white_selector"
            android:textSize="@dimen/bar_font_30"
            android:gravity="center"
            android:button="@drawable/none"
            android:background="@drawable/button_pink_frame_round"
            android:checked="false"/>
    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/hint_content_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_hint_content"
        android:id="@+id/shopping_hint_tv"
        android:lineSpacingMultiplier="1.5"
        android:textColor="@color/global_text_gray"
        android:textSize="@dimen/bar_font_30"
        android:lineSpacingExtra="2dp"
        android:layout_marginTop="7dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/shopping_retreat_content"
        android:id="@+id/shopping_retreat_tv"
        android:lineSpacingMultiplier="1.5"
        android:textColor="@color/global_text_gray"
        android:textSize="@dimen/bar_font_30"
        android:lineSpacingExtra="2dp"
        android:layout_marginTop="7dp"/>
     <com.xingy.lib.ui.AutoHeightImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         inmost:baseWidth="1"
         inmost:baseHeight="1"
         android:layout_centerHorizontal="true"
         android:id="@+id/shopping_flow_imgv"/>
    </RelativeLayout>
</LinearLayout>