<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:inmost="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:background="@color/global_bra_bg"
    android:orientation="vertical">

    <com.xingy.lib.ui.NavigationBar
        android:layout_alignParentTop="true"
        android:id="@+id/edit_add_nav"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        inmost:leftVisiable="true"
        inmost:text="@string/receiver_info"
        inmost:drawableLeft="@drawable/pink_icon_back"
        inmost:bgColor="@color/white"
        inmost:textColor="@color/global_pink"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/edit_add_nav">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/name"
        android:padding="10dp"
        android:background="@drawable/input_bg_with_right"
        android:hint="@string/receiver_name_must"
        android:textSize="@dimen/bar_font_30"
        android:textColor="@color/global_nav_text"
        android:textColorHint="@color/global_text_info_color"/>
    <EditText
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/phone"
        android:padding="10dp"
        android:background="@drawable/input_bg_with_right"
        android:hint="@string/phone_num_must"
        android:textColor="@color/global_nav_text"
        android:textColorHint="@color/global_text_info_color"
        android:textSize="@dimen/bar_font_30"/>

    <EditText
        android:editable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/area"
        android:padding="10dp"
        android:background="@drawable/input_bg_with_right"
        android:hint="@string/area_3_level"
        android:textColor="@color/global_nav_text"
        android:textColorHint="@color/global_text_info_color"
        android:textSize="@dimen/bar_font_30"/>


    <EditText
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:id="@+id/area_code"
        android:padding="10dp"
        android:background="@drawable/input_bg_with_right"
        android:hint="@string/area_code"
        android:textColor="@color/global_nav_text"
        android:textColorHint="@color/global_text_info_color"
        android:textSize="@dimen/bar_font_30"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/address_detail"
        android:padding="10dp"
        android:gravity="left|top"
        android:minLines="5"
        android:background="@drawable/input_bg_with_right"
        android:hint="@string/address_detail"
        android:textColor="@color/global_nav_text"
        android:textColorHint="@color/global_text_info_color"
        android:textSize="@dimen/bar_font_30"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/long_pink_round"
        android:text="@string/submit"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_margin="40dp"
        android:textSize="@dimen/bar_font_30"
        android:id="@+id/submit_address"/>
    <com.xingy.lib.ui.AreaPickerView
        android:id="@+id/area_picker"
        inmost:btnBackground="@drawable/long_pink_round"
        inmost:btnTxtColor="@color/white"
        inmost:resultTxtColor="@color/global_pink"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:background="#40000000"
        android:visibility="gone"/>

</RelativeLayout>